--- a/style.css
+++ b/style.css
@@ -69,5 +69,7 @@ body {
 button:hover {
   border: 2px solid #000201;
   background: #df0b0b;
+  transition-duration: 2s;
+  transition-duration: 2s;
 }
 
