--- a/secondStyle.css
+++ b/secondStyle.css
@@ -2,6 +2,7 @@ body {
     background-color: rgb(141, 27, 27);
     display: grid;
     text-align: center;
+    max-height: fit-content;
 }
 
 .button {
